--- a/TeachFlow/Templates/accounts/login.html
+++ b/TeachFlow/Templates/accounts/login.html
@@ -171,7 +171,7 @@
         </div>
         
         <div class="create-account">
-            <a href="#">Criar conta</a>
+            <a href="{% url 'register' %}">Criar conta</a>
         </div>
     </div>
 
