style: juste de lable

--- a/TeachFlow/Templates/accounts/login.html
+++ b/TeachFlow/Templates/accounts/login.html
@@ -28,7 +28,7 @@
             <form id="loginForm" method="post" action="{% url 'login' %}">
                 {% csrf_token %}
                 <div style="margin-bottom: 1.5rem;">
-                    <label class="text-sm text-gray-600">Email</label>
+                    <label class="text-sm text-gray-600">Email ou Nome de Usuário</label>
                     <input 
                         id="email" 
                         name="email" 
