--- a/TeachFlow/Templates/base.html
+++ b/TeachFlow/Templates/base.html
@@ -70,7 +70,7 @@
                             </svg>
                             Exercícios
                         </a>
-                        <a href="{% url 'teacher_profile' %}" class="flex items-center px-4 py-3 mb-2 text-gray-700 rounded-lg hover:bg-gray-200 {% if request.resolver_match.url_name == 'teacher_profile' %}bg-primary text-white{% endif %}">
+                        <a href="{% url 'profile' %}" class="flex items-center px-4 py-3 mb-2 text-gray-700 rounded-lg hover:bg-gray-200 {% if request.resolver_match.url_name == 'profile' %}bg-primary text-white{% endif %}">
                             <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
                             </svg>
@@ -108,7 +108,7 @@
                     </svg>
                     <span class="text-xs">Exercícios</span>
                 </a>
-                <a href="{% url 'teacher_profile' %}" class="flex flex-col items-center py-2 text-gray-700 {% if request.resolver_match.url_name == 'teacher_profile' %}text-primary{% endif %}">
+                <a href="{% url 'profile' %}" class="flex flex-col items-center py-2 text-gray-700 {% if request.resolver_match.url_name == 'profile' %}text-primary{% endif %}">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
                     </svg>
