fix: ajuste para funcionar com os novos arquivos tawilwind

--- a/TeachFlow/Templates/base.html
+++ b/TeachFlow/Templates/base.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/build.css' %}">
     <script>
         tailwind.config = {
             theme: {
