--- a/TeachFlow/Templates/base.html
+++ b/TeachFlow/Templates/base.html
@@ -66,10 +66,14 @@
     </div>
 </div>
 
-<script src="https://unpkg.com/lucide@latest"></script>
+<script src="https://unpkg.com/lucide@latest" defer></script>
+<script src="{% static 'js/delete_student_modal.js' %}" defer></script>
 <script>
-    lucide.createIcons();
+    window.addEventListener("DOMContentLoaded", () => {
+        lucide.createIcons();
+    });
 </script>
 
+{% block scripts %}{% endblock %}
 </body>
 </html>
