--- a/TeachFlow/Templates/students/student_form.html
+++ b/TeachFlow/Templates/students/student_form.html
@@ -11,7 +11,9 @@
     Turma: <span class="font-medium text-blue-600">{{ class_group.name }}</span>
   </p>
 
-  <form method="post" class="space-y-6">
+  <form method="post" class="space-y-6"
+      action="{% if form.instance.pk %}{% url 'student_update' class_group.id form.instance.pk %}{% else %}{% url 'student_create' class_group.id %}{% endif %}">
+
     {% csrf_token %}
 
     <div>
@@ -50,7 +52,7 @@
       <a href="{% url 'class_group_detail' class_group.id %}" class="text-sm text-gray-500 hover:text-gray-800 hover:underline">Cancelar</a>
       <button type="submit"
               class="bg-blue-500 text-white px-2 py-1 rounded-md text-sm hover:bg-blue-700 transition-all">
-        Adicionar Aluno
+            {% if form.instance.pk %}Salvar Alterações{% else %}Adicionar Aluno{% endif %}
       </button>
     </div>
   </form>
