--- a/TeachFlow/Templates/classes/class_group_detail.html
+++ b/TeachFlow/Templates/classes/class_group_detail.html
@@ -45,7 +45,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"/>
             </svg>
-            Adicionar Aluno
+            Editar lista de alunos
           </a>          
     </div>
 
