--- a/TeachFlow/Templates/dashboard/dashboard.html
+++ b/TeachFlow/Templates/dashboard/dashboard.html
@@ -18,7 +18,7 @@
             <i data-lucide="calendar-check" class="w-6 h-6 text-primary"></i>
             <h2 class="text-lg font-semibold text-gray-800">Planejamento do Dia</h2>
         </div>
-        <a href="{% url 'lesson_create' %}" class="flex items-center gap-2 bg-primary text-white px-4 py-1 rounded-lg hover:bg-blue-600 transition">
+        <a href="{% url 'lesson_form' %}" class="flex items-center gap-2 bg-primary text-white px-4 py-1 rounded-lg hover:bg-blue-600 transition">
             <i data-lucide="plus" class="w-5 h-5"></i>
             <span>Nova Aula</span>
         </a>
